# genetic-algorithm-phrase-rust-performance

./: Cargo.toml  LICENSE_MIT  README.md
src/: dna.rs  lib.rs  population.rs  random.rs
www/: package-lock.json  package.json  tsconfig.json  vite.config.ts
www/public/: worker.js
www/src/: App.vue  main.ts
www/src/classes/: DNA.ts  Population.ts
www/src/components/: Controls.vue
www/src/components/buttons/: StandardButton.vue
www/src/components/inputs/: RegularInput.vue  ToggleInput.vue
www/src/composable/: uniqueNumber.ts
www/src/helpers/: getRandomCharacter.ts  getRandomInteger.ts  getRandomNumber.ts  mapValueToRange.ts
www/src/store/: controls.ts
